--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,23 @@
-@import url(https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap);
+@font-face {
+    font-family: 'NIXGONM-Vb';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/NIXGONM-Vb.woff')
+    format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /*
+
+@import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Jua&display=swap');
+
 .kopubbatang * {
     font-family: 'KoPub Batang', serif;
 }
 */
 
 body *{
-    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'NIXGONM-Vb', serif;
     margin: 0;
     padding: 0;
 }
@@ -45,8 +56,26 @@ body *{
     float: right;
 }
 
-.header-right *{
-    margin-bottom: 10px;
+div *{
+    margin-bottom: 15px;
+}
+
+li{
+    list-style-type: circle;
+    margin: 5px 0px 5px 0px;
+}
+
+.main-description{
+    clear:right;
+    margin-top: 30px;
+}
+
+.main-description div{
+    margin: 50px 0px 50px 0px;
+}
+
+.main-description div div{
+    margin: 30px 0px 30px 0px;
 }
 
 .main-bottom{
@@ -59,4 +88,9 @@ a {
 }
 a span{
     margin-right: 10px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
