--- a/src/main.css
+++ b/src/main.css
@@ -6,7 +6,11 @@
     font-style: normal;
 }
 
+@import url('//cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
+
 /*
+
+@import url('//cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
 
 @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Jua&display=swap');
@@ -23,7 +27,7 @@ body *{
 }
 
 .main{
-    width: 650px;
+    width: 700px;
     margin: 0 auto;
     margin-top: 100px;
     overflow: hidden;
@@ -58,6 +62,10 @@ body *{
 
 div *{
     margin-bottom: 15px;
+}
+
+.header{
+    margin-bottom: 0px;
 }
 
 li{
