🤸 Fill all blocks

--- a/src/icon/flaticon.css
+++ b/src/icon/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 13/09/2019 07:52
+  	Creation date: 24/12/2019 13:49
   	*/
 
 @font-face {
@@ -30,7 +30,8 @@ font-style: normal;
 margin-left: 20px;
 }
 
-.flaticon-facebook-logo:before { content: "\f100"; }
-.flaticon-blogging:before { content: "\f101"; }
-.flaticon-linkedin-sign:before { content: "\f102"; }
-.flaticon-github-sign:before { content: "\f103"; }
+.flaticon-mail:before { content: "\f100"; }
+.flaticon-facebook-app-logo:before { content: "\f101"; }
+.flaticon-blogging:before { content: "\f102"; }
+.flaticon-linkedin-sign:before { content: "\f103"; }
+.flaticon-github-sign:before { content: "\f104"; }
