--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,20 @@
 @font-face {
+    font-family: 'RIDIBatang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/RIDIBatang.woff')
+    format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+/*
+@font-face {
     font-family: 'NIXGONM-Vb';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/NIXGONM-Vb.woff')
     format('woff');
     font-weight: normal;
     font-style: normal;
 }
-
-@import url('//cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
-
-/*
-
 @import url('//cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
 
 @import url('https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap');
@@ -21,7 +26,7 @@
 */
 
 body *{
-    font-family: 'NIXGONM-Vb', serif;
+    font-family: 'RIDIBatang', serif;
     margin: 0;
     padding: 0;
 }
@@ -34,8 +39,8 @@ body *{
 }
 
 .profile-image{
-    width: 200px;
-    height: 200px;
+    width: 230px;
+    height: 230px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
@@ -101,4 +106,19 @@ a span{
 img {
     width: 100%;
     height: 100%;
+}
+
+table{
+    width: 100%;
+}
+
+td.name{
+    width: 15%;
+}
+td.level{
+    width: 35%;
+}
+
+img{
+    width: 70%;
 }
