--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,8 @@
 @import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
 
-.nanumsquare {
+* {
     font-family: 'NanumSquare', sans-serif !important;
+    line-height: 1.5;
 }
 
 .main {
@@ -22,8 +23,6 @@
 .profile-image img {
     display: inline;
     margin: 0 auto;
-    height: 100%;
-    width: auto;
 }
 
 .header {
